# c_iz1

./: CMakeLists.txt  Makefile  README.md  main.c
.github/workflows/: ci.yml
roads/: CMakeLists.txt  roads.c  roads.h
tests/: CMakeLists.txt  test_roads.cpp
